Added & implemented the board class.

--- a/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj
+++ b/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj
@@ -143,12 +143,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Board.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="raylibCpp.cpp" />
     <ClCompile Include="StateMachine.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Board.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="raylibCpp.h" />
     <ClInclude Include="Settings.h" />
