Added & implemented Depth First algorithm robot.

--- a/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj.filters
+++ b/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="raylibCpp.cpp">
       <Filter>Source Files\Engine</Filter>
     </ClCompile>
+    <ClCompile Include="DFSRobot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -64,6 +67,9 @@
     </ClInclude>
     <ClInclude Include="Vec2.h">
       <Filter>Header Files\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="DFSRobot.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
