Created a base Robot class that the algorithm robots can inherit from.

--- a/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj
+++ b/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="DFSRobot.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="raylibCpp.h" />
+    <ClInclude Include="Robot.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateMachine.h" />
