Added Breadth First robot files.

--- a/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj
+++ b/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BFSRobot.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="DFSRobot.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -151,6 +152,7 @@
     <ClCompile Include="StateMachine.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BFSRobot.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="DFSRobot.h" />
     <ClInclude Include="Game.h" />
