--- a/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj.filters
+++ b/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="BFSRobot.cpp">
       <Filter>Source Files\Robot</Filter>
     </ClCompile>
+    <ClCompile Include="Robot.cpp">
+      <Filter>Source Files\Robot</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
