--- a/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj.filters
+++ b/Breadth Depth Pathfinding/Breadth Depth Pathfinding.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="RunningState.cpp">
       <Filter>Source Files\Engine\States</Filter>
     </ClCompile>
+    <ClCompile Include="SetupState.cpp">
+      <Filter>Source Files\Engine\States</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files\Robot</Filter>
     </ClInclude>
     <ClInclude Include="RunningState.h">
+      <Filter>Header Files\Engine\States</Filter>
+    </ClInclude>
+    <ClInclude Include="SetupState.h">
       <Filter>Header Files\Engine\States</Filter>
     </ClInclude>
   </ItemGroup>
